name:                postgis-simple
version:             0.1.0.1
synopsis:            Haskell DB driver for PostGIS extention
description:         This is a almost fully rewritten fork of
                     'haskell-postgis' package of Peter
                     (https://github.com/ewestern/haskell-postgis). 
                     Provides a way for direct use of user-defined
                     Haskell data with PostGIS databases.
license:             MIT
license-file:        LICENSE
author:              igor720
maintainer:          igor720@gmail.com
category:            Database
build-type:          Simple
extra-source-files:  README.md, include/pgisConst.h
cabal-version:       >=1.10

library
  exposed-modules:  
      Postgis.Simple
    , Postgis.Simple.Internal
    , Postgis.Simple.Types.Default
  other-modules:
      Postgis.Simple.Field.Default
  hs-source-dirs:   src
  build-depends:
      base >= 4.7 && < 5
    , bytestring > 0.9
    , vector
    , postgresql-simple
    , binary >= 0.7
    , bytestring-lexing >= 0.4.3
    , cpu >= 0.1.2
    , mtl >= 0.1
    , data-binary-ieee754 >= 0.4
  default-language:    Haskell2010
  include-dirs: include
  includes: pgisConst.h
  install-includes: pgisConst.h
  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/igor720/haskell-postgis.git
